// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly 1`] = `
<div
  className="abs-width-400"
>
  <div
    className="big-padded"
  >
    <Radio
      alignLabel={true}
      checked={true}
      className="big-spacer-bottom status-radio"
      onCheck={[MockFunction]}
      value="TO_REVIEW"
    >
      <StatusDescription
        statusInBadge={false}
        statusOption="TO_REVIEW"
      />
    </Radio>
    <Radio
      alignLabel={true}
      checked={false}
      className="big-spacer-bottom status-radio"
      onCheck={[MockFunction]}
      value="ACKNOWLEDGED"
    >
      <StatusDescription
        statusInBadge={false}
        statusOption="ACKNOWLEDGED"
      />
    </Radio>
    <Radio
      alignLabel={true}
      checked={false}
      className="big-spacer-bottom status-radio"
      onCheck={[MockFunction]}
      value="FIXED"
    >
      <StatusDescription
        statusInBadge={false}
        statusOption="FIXED"
      />
    </Radio>
    <Radio
      alignLabel={true}
      checked={false}
      className="big-spacer-bottom status-radio"
      onCheck={[MockFunction]}
      value="SAFE"
    >
      <StatusDescription
        statusInBadge={false}
        statusOption="SAFE"
      />
    </Radio>
  </div>
  <hr />
  <div
    className="big-padded display-flex-column"
  >
    <label
      className="text-bold"
      htmlFor="comment-textarea"
    >
      hotspots.status.add_comment
    </label>
    <textarea
      className="spacer-top form-field fixed-width spacer-bottom"
      id="comment-textarea"
      onChange={[Function]}
      rows={4}
      value="TEST-COMMENT"
    />
    <FormattingTips />
    <div
      className="big-spacer-top display-flex-justify-end display-flex-center"
    >
      <SubmitButton
        disabled={false}
        onClick={[MockFunction]}
      >
        hotspots.status.change_status
      </SubmitButton>
    </div>
  </div>
</div>
`;

exports[`should render correctly: loading 1`] = `
<div
  className="abs-width-400"
>
  <div
    className="big-padded"
  >
    <Radio
      alignLabel={true}
      checked={true}
      className="big-spacer-bottom status-radio"
      onCheck={[MockFunction]}
      value="TO_REVIEW"
    >
      <StatusDescription
        statusInBadge={false}
        statusOption="TO_REVIEW"
      />
    </Radio>
    <Radio
      alignLabel={true}
      checked={false}
      className="big-spacer-bottom status-radio"
      onCheck={[MockFunction]}
      value="ACKNOWLEDGED"
    >
      <StatusDescription
        statusInBadge={false}
        statusOption="ACKNOWLEDGED"
      />
    </Radio>
    <Radio
      alignLabel={true}
      checked={false}
      className="big-spacer-bottom status-radio"
      onCheck={[MockFunction]}
      value="FIXED"
    >
      <StatusDescription
        statusInBadge={false}
        statusOption="FIXED"
      />
    </Radio>
    <Radio
      alignLabel={true}
      checked={false}
      className="big-spacer-bottom status-radio"
      onCheck={[MockFunction]}
      value="SAFE"
    >
      <StatusDescription
        statusInBadge={false}
        statusOption="SAFE"
      />
    </Radio>
  </div>
  <hr />
  <div
    className="big-padded display-flex-column"
  >
    <label
      className="text-bold"
      htmlFor="comment-textarea"
    >
      hotspots.status.add_comment
    </label>
    <textarea
      className="spacer-top form-field fixed-width spacer-bottom"
      id="comment-textarea"
      onChange={[Function]}
      rows={4}
      value="TEST-COMMENT"
    />
    <FormattingTips />
    <div
      className="big-spacer-top display-flex-justify-end display-flex-center"
    >
      <SubmitButton
        disabled={true}
        onClick={[MockFunction]}
      >
        hotspots.status.change_status
      </SubmitButton>
      <i
        className="spacer-left spinner"
      />
    </div>
  </div>
</div>
`;
